# controllers/Geocode.js
@@ -13,6 +13,16 @@ module.exports.geocodeByQueryString = function geocodeByQueryString (req, res, n
     });
 };
 
+module.exports.geocodeByQueryStringBatch = function geocodeByQueryStringBatch (req, res, next, body, lon, lat) {
+  Geocode.geocodeByQueryStringBatch(body, lon, lat)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
 module.exports.geocodeByStructuredQuery = function geocodeByStructuredQuery (req, res, next, country, state, city, district, postcode, street, housenumber, lon, lat) {
   Geocode.geocodeByStructuredQuery(country, state, city, district, postcode, street, housenumber, lon, lat)
     .then(function (response) {
@@ -20,5 +30,15 @@ module.exports.geocodeByStructuredQuery = function geocodeByStructuredQuery (req
     })
     .catch(function (response) {
       utils.writeJson(res, response, 500);
+    });
+};
+
+module.exports.geocodeByStructuredQueryBatch = function geocodeByStructuredQueryBatch (req, res, next, body, lon, lat) {
+  Geocode.geocodeByStructuredQueryBatch(body, lon, lat)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
     });
 };
